Wed Apr 25 15:23:29 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (NtInitialize, exit_handler): add initializing and
	  cleanup of critical section object for select.

	* win32/win32.c (do_select): block reentrance.

	* win32/win32.c (rb_w32_select): 0 sec polling of socket. this is
	  workaround because winsock cannot do select at same socket at the
	  same time by two or more threads.

Wed Apr 25 14:10:47 2007  Koichi Sasada  <ko1@atdot.net>

	* ext/probeprofiler/probeprofiler.c: fix function name and
	  return value.

Wed Apr 25 12:42:40 2007  Koichi Sasada  <ko1@atdot.net>

	* yarvcore.h: remove rb_control_frame_t#callee_id.

	* vm_macro.def: ditto.

	* eval_intern.h (exec_event_hooks): fix to check event flags

	* eval_intern.h (EXEC_EVENT_HOOK): fix to re-check event flags.

	* ext/probeprofiler : added.  this profiler is sampling based
	  profiler.

	* vm.c: add rb_thread_current_status() API for probeprofiler.

	* thread.c (rb_thread_execute_interrupts): add comments.

Wed Apr 25 10:36:03 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_intern.h (PUSH_TAG): no argument now.

	* eval.c, eval_error.h, eval_jump.h, eval_load.c, proc.c, thread.c:
	  ditto.

	* thread.c (alloc_event_fook, rb_thread_remove_event_hook): should
	  return value.

Tue Apr 24 09:33:57 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (do_stat, do_lstat, do_opendir): should not warn ENOTDIR.
	  [ruby-talk:248288]

Mon Apr 23 22:14:42 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb ($ruby): add extout directory to include path.
	  [ruby-core:11003]

	* lib/mkmf.rb (libpathflag): not to append RPATHFLAG to current
	  directory.

	* lib/mkmf.rb (init_mkmf): add current directory to default
	  library path with highest priority.  [ruby-core:10960]

	* lib/mkmf.rb (LINK_SO): LIBPATH to be placed before DLDFLAGS.

Fri Apr 20 16:05:22 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBPATHFLAG, RPATHFLAG): no needs to be quoted,